--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "@angularclass/hmr": "~1.2.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "~0.6.23"
+    "zone.js": "~0.6.23",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.1",
+    "@ngrx/store-devtools": "^3.1.0"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.28",
@@ -59,7 +62,7 @@
     "ts-loader": "^0.8.2",
     "ts-node": "^1.2.2",
     "typescript": "^2.0.0-beta",
-    "webpack": "^2.1.0-beta.22",
+    "webpack": "2.1.0-beta.22",
     "webpack-dashboard": "0.0.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.1.0-beta.0"
